<resources>
    <string name="app_name">DataBaseAndroid</string>
    <string name="title_activity_android_sample">AndroidSampleActivity</string>
    <string name="demostring">Demo</string>
    <string name="number1">첫 번째 숫자</string>
    <string name="number2">두 번째 숫자</string>
    <string name="addButton">+</string>
    <string name="subtractButton">-</string>
    <string name="multiplyButton">*</string>
    <string name="divideButton">/</string>
    <string name="title_activity_alarm_action">AlarmActionActivity</string>
    <string name="notify">Notify</string>
    <string name="notifyButton">Notify</string>
    <string name="createAlarm">알림 생성</string>
    <string name="deleteAlarm">알림 재거</string>
    <string name="kjh">김지하</string>
    <string name="khw">김혜원</string>
    <string name="kyh">김용호</string>
    <string name="oneMsg">oneMsg</string>
    <string name="twoMsg">twoMsg</string>
    <string name="threeMsg">threeMsg</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_saved_alarm">SavedAlarm</string>
</resources>
